Use a C++ compiler to build on non-Windows platforms
`zpaqfranz.cpp` is a C++ program, so it should be built with a C++
compiler.

Also, `-lstdc++` is removed from `LDADD` because this should already be
added by the C++ compiler.

Fixes #50.

Signed-off-by: Ruoyu Zhong <zhongruoyu@outlook.com>

--- a/NONWINDOWS/Makefile
+++ b/NONWINDOWS/Makefile
@@ -1,9 +1,9 @@
-CC?=            cc
+CXX?=           c++
 INSTALL?=       install
 RM?=            rm
 PROG=           zpaqfranz
-CFLAGS+=        -O3 -Dunix
-LDADD=          -pthread -lstdc++ -lm
+CXXFLAGS+=      -O3 -std=c++11 -Dunix
+LDADD=          -pthread -lm
 BINDIR=         /usr/local/bin
 BSD_INSTALL_PROGRAM?=   install -m 0555
 
@@ -15,6 +15,6 @@ install:        ${PROG}
 	${BSD_INSTALL_PROGRAM} ${PROG} ${DESTDIR}${BINDIR}
 
 ${PROG}:        ${OBJECTS}
-	${CC}  ${CFLAGS} zpaqfranz.cpp -o ${PROG} ${LDADD}
+	${CXX}  ${CXXFLAGS} zpaqfranz.cpp -o ${PROG} ${LDADD}
 clean:
 	${RM} -f ${PROG}
