--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -26,7 +26,7 @@ task:
     - export PATH="/usr/local/opt/gcc/bin:$PATH"
     - g++ --version
   compile_script:
-    - g++ -DSFTP -DHWSHA2 -g -O0 -Wall -Wextra -pthread zpaqfranz.cpp -lm -ldl -o zpaqfranz 2>&1 | tee build_report.txt
+    - g++ -Dunix -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -std=c++11 -Wall -Wpedantic 2>&1 | tee build_report.txt
   test_script:
     - ./zpaqfranz autotest
   always:
@@ -39,11 +39,11 @@ task:
 task:
   name: Build on FreeBSD
   freebsd_instance:
-    image_name: freebsd-13-2-release-amd64
+    image_name: freebsd-13-1-release-amd64
   install_script:
-    - pkg install -y g++ zlib
+    - pkg install -y clang g++ zlib
   compile_script:
-    - g++ -DSFTP -DHWSHA2 -g -O0 -Wall -Wextra -pthread zpaqfranz.cpp -lm -ldl -o zpaqfranz 2>&1 | tee build_report.txt
+    - cc -DHWSHA2 -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -lstdc++ -lm 2>&1 | tee build_report.txt
   test_script:
     - ./zpaqfranz autotest
   always:
@@ -63,7 +63,7 @@ task:
     - choco install mingw zlib -y
     - g++ --version
   compile_script:
-    - g++ -DSFTP -DHWSHA2 -g -O0 -Wall -Wextra -pthread zpaqfranz.cpp -lm -o zpaqfranz 2>&1 | tee build_report.txt
+    - g++ -s -DSFTP -DHWSHA2 zpaqfranz.cpp -o zpaqfranz.exe -pthread -static -Wall -Wpedantic -lurlmon 2>&1 | tee build_report.txt
   test_script:
     - zpaqfranz.exe autotest
   always:
