--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,32 +1,12 @@
-# Task per Linux va
-linux_task:
-  name: Build on Linux
-  container:
-    image: gcc:latest
+# Task per FreeBSD
+freebsd13_task:
+  name: Build on FreeBSD
+  freebsd_instance:
+    image_name: freebsd-13-1-release-amd64
   install_script:
-    - apt-get update && apt-get install -y g++ libz-dev
+    - pkg install -y clang g++ zlib
   compile_script:
-    - g++ -DSFTP -DHWSHA2 -g -O0 -Wall -Wextra -pthread zpaqfranz.cpp -lm -ldl -o zpaqfranz 2>&1 | tee build_report.txt
-  test_script:
-    - ./zpaqfranz autotest
-  always:
-    report_artifacts:
-      path: build_report.txt
-    executable_artifacts:
-      path: zpaqfranz
-
-# Task per macOS va
-macos_task:
-  name: Build on macOS
-  macos_instance:
-    image: ghcr.io/cirruslabs/macos-runner:sonoma
-  install_script:
-    - brew update
-    - brew install gcc zlib
-    - export PATH="/usr/local/opt/gcc/bin:$PATH"
-    - g++ --version
-  compile_script:
-    - g++ -Dunix -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -std=c++11 -Wall -Wpedantic 2>&1 | tee build_report.txt
+    - cc -DHWSHA2 -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -lstdc++ -lm 2>&1 | tee build_report.txt
   test_script:
     - ./zpaqfranz autotest
   always:
