--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,12 +1,12 @@
-# Task per FreeBSD
-freebsd13_task:
-  name: Build on FreeBSD
+# Opzione 1: Usa FreeBSD 14.0 (più recente e probabilmente disponibile)
+freebsd14_task:
+  name: Build on FreeBSD 14.0
   freebsd_instance:
-    image_name: freebsd-13-1-release-amd64
+    image_name: freebsd-14-0-release-amd64
   install_script:
-    - pkg install -y clang g++ zlib
+    - pkg install -y clang gcc zlib
   compile_script:
-    - cc -DHWSHA2 -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -lstdc++ -lm 2>&1 | tee build_report.txt
+    - c++ -DHWSHA2 -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -lm -lz 2>&1 | tee build_report.txt
   test_script:
     - ./zpaqfranz autotest
   always:
