--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,11 +1,11 @@
-freebsd13_latest_task:
-  name: Build on FreeBSD 13.3
+freebsd13_task:
+  name: Build on FreeBSD
   freebsd_instance:
-    image_name: freebsd-13-3-release-amd64
+    image_name: freebsd-13-1-release-amd64
   install_script:
-    - pkg install -y clang gcc zlib
+    - pkg install -y clang zlib
   compile_script:
-    - c++ -DHWSHA2 -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -lm -lz 2>&1 | tee build_report.txt
+    - clang++ -DHWSHA2 -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -lstdc++ -lm -lz 2>&1 | tee build_report.txt
   test_script:
     - ./zpaqfranz autotest
   always:
