--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,17 +5,17 @@ macos_arm64:
   install_script:
     - brew update
     - brew install gcc zlib
-    # Usa il gcc di Homebrew per ARM64
     - export PATH="$(brew --prefix gcc)/bin:$PATH"
     - g++ --version
     - uname -m  # Dovrebbe mostrare arm64
   compile_script:
-    - $(brew --prefix gcc)/bin/g++ -Dunix -DSFTP -arch arm64 -DNOJIT zpaqfranz.cpp -o zpaqfranz -pthread -std=c++11 -Wall -Wpedantic 2>&1 | tee build_report.txt
+    - echo "Build started at $(date)" > build_report.txt
+    - $(brew --prefix gcc)/bin/g++ -Dunix -DSFTP -arch arm64 -DNOJIT zpaqfranz.cpp -o zpaqfranz -pthread -std=c++11 -Wall -Wpedantic -lz -O2 2>&1 | tee -a build_report.txt
   test_script:
-    - ./zpaqfranz autotest
+    - [ -f ./zpaqfranz ] && ./zpaqfranz autotest || { echo "Errore: zpaqfranz non trovato"; exit 1; }
+    - ./zpaqfranz autotest || { echo "Test fallito"; exit 1; }
   always:
     report_artifacts:
       path: build_report.txt
     executable_artifacts:
       path: zpaqfranz
-
