--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,15 +1,12 @@
-# Task per macOS va
 macos_task:
-  name: Build on macOS
+  name: Build on macOS on Apple Silicon
   macos_instance:
     image: ghcr.io/cirruslabs/macos-runner:sonoma
   install_script:
     - brew update
-    - brew install gcc zlib
-    - export PATH="/usr/local/opt/gcc/bin:$PATH"
-    - g++ --version
+    - brew install zlib
   compile_script:
-    - g++ -Dunix -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -std=c++11 -Wall -Wpedantic 2>&1 | tee build_report.txt
+    - clang++ -Dunix -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -std=c++11 -Wall -Wpedantic -lz 2>&1 | tee build_report.txt
   test_script:
     - ./zpaqfranz autotest
   always:
