--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,12 +1,15 @@
-# Task per FreeBSD che va
-freebsd14_task:
-  name: Build on FreeBSD
-  freebsd_instance:
-    image_family: freebsd-14-2
+# Task per macOS va
+macos_task:
+  name: Build on macOS
+  macos_instance:
+    image: ghcr.io/cirruslabs/macos-runner:sonoma
   install_script:
-    - pkg install -y llvm
+    - brew update
+    - brew install gcc zlib
+    - export PATH="/usr/local/opt/gcc/bin:$PATH"
+    - g++ --version
   compile_script:
-    - cc -O3 -DHWSHA2 -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -lstdc++ -lm 2>&1 | tee build_report.txt
+    - g++ -O3 -Dunix -DSFTP zpaqfranz.cpp -o zpaqfranz -pthread -std=c++11 -Wall -Wpedantic 2>&1 | tee build_report.txt
   test_script:
     - ./zpaqfranz b -debug 2>&1 | tee test_report.txt
   always:
